--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <div class='div1'></div><div class='gap'></div><div class='div2'></div>
     <div class="social-links">
            
-        <a href="https://www.youtube.com/@prodbyabnormal" target="_blank"><img src="youtube.png" alt="Youtube"></a>
-        <a href="https://open.spotify.com/artist/7fc1beONoGaY0613kvQKWe" target="_blank"><img src="spotify.png" alt="Spotify"></a>
-        <a href="https://music.apple.com/us/artist/prodbyabnormal/1659561553" target="_blank"><img src="amusic.png" alt="Apple Music"></a>
-        <a href="https://www.deezer.com/artist/193172907" target="_blank"><img src="deezer.png" alt="Deezer"></a>
+        <a href="https://www.youtube.com/@prodbyabnormal" target="_blank">Youtube</a>
+        <a href="https://open.spotify.com/artist/7fc1beONoGaY0613kvQKWe" target="_blank">Spotify</a>
+        <a href="https://music.apple.com/us/artist/prodbyabnormal/1659561553" target="_blank">Apple Music</a>
+        <a href="https://www.deezer.com/artist/193172907" target="_blank">Deezer</a>
         
 
+        <br>
         <br>
 
         <a href="https://discord.gg/42KXWwAWbp" target="_blank">Discord</a>
