--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>prodbyabnormal</title>
 </head>
 <body>
   <div class="container">
     <h1>prodbyabnormal</h1>
-    <h5>prodbyabnormal on all platforms</h5>
     
 
     
