--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 
 
         <br>
+        <a href="https://soundcloud.com/imbald" target="_blank">Soundcloud</a>
+        <br>
+        <a href="https://youtube.com/@prodbyabnormal" target="_blank">Youtube</a>
         <br>
         <a href="https://tiktok.com/@prodbyabnormal" target="_blank">Tiktok</a>
-        <br>
         <br>
         <a href="https://instagram.com/prodbyabnormal" target="_blank">Instagram</a>
         <br>
         <br>
-        <a href="https://soundcloud.com/imbald" target="_blank">Soundcloud</a>
+        
       
 
 
