--- a/nslc.html
+++ b/nslc.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1>NSLC Building Help</h1>
     <h5>Hodson XXX = Hodson Hall</h5>
-    <h5>Salon C = Insomnia Cookies (Scott Bates Commons)</h5>
+    <h5>Salon C = Insomnia / Scott Bates Commons</h5>
   
 
     
