--- a/nslc.html
+++ b/nslc.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GOTTEM</title>
+<title>HEHE</title>
 </head>
 <body>
 <script>
-window.onload = function() {
+document.addEventListener("ready", function() {
   var video = document.querySelector("video");
   video.play();
-};
+});
 </script>
 <video src="troll.mp4" controls></video>
 </body>
