--- a/nslc.html
+++ b/nslc.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>HEHE</title>
+<title>GOTTEM</title>
 </head>
 <body>
-<script>
-document.addEventListener("ready", function() {
-  var video = document.querySelector("video");
-  video.play();
-});
-</script>
-<video src="troll.mp4" controls></video>
+<img src="meme.png" alt="GOTTEM">
 </body>
 </html>
