--- a/nslc.html
+++ b/nslc.html
@@ -5,5 +5,12 @@
 </head>
 <body>
 <img src="meme.png" alt="GOTTEM">
+img {
+  width: 500px;
+  height: 500px;
+  object-fit: contain;
+  margin: 0 auto;
+}
+
 </body>
 </html>
