--- a/nslc.html
+++ b/nslc.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GOTTEM</title>
-</head>
-<body>
-<img src="meme.png" alt="GOTTEM">
+<title>Troll Meme</title>
+<style>
 img {
   width: 500px;
   height: 500px;
   object-fit: contain;
   margin: 0 auto;
 }
-
+</style>
+</head>
+<body>
+<img src="meme.png" alt="Troll meme" />
 </body>
 </html>
