--- a/namegen.html
+++ b/namegen.html
@@ -9,19 +9,29 @@
   <button onclick="generateName()">Generate Name</button>
 
   <script>
-    function generateName() {
-      // Fetch names from the text files using AJAX or fetch
-      // (Implementation details for AJAX or fetch would go here)
+    async function generateName() {
+      try {
+        // Fetch first names
+        const firstNamesResponse = await fetch("namegen/first-female-names.txt");
+        const firstNamesText = await firstNamesResponse.text();
+        const firstNames = firstNamesText.split("\n");
 
-      // Once names are fetched, randomly select a name from each list
-      const firstNames = ["...list of first names from file..."];
-      const lastNames = ["...list of last names from file..."];
-      const randomFirstIndex = Math.floor(Math.random() * firstNames.length);
-      const randomLastIndex = Math.floor(Math.random() * lastNames.length);
-      const generatedName = firstNames[randomFirstIndex] + " " + lastNames[randomLastIndex];
+        // Fetch last names
+        const lastNamesResponse = await fetch("namegen/last-names.txt");
+        const lastNamesText = await lastNamesResponse.text();
+        const lastNames = lastNamesText.split("\n");
 
-      // Display the generated name
-      document.getElementById("generated-name").textContent = generatedName;
+        // Generate a random name
+        const randomFirstIndex = Math.floor(Math.random() * firstNames.length);
+        const randomLastIndex = Math.floor(Math.random() * lastNames.length);
+        const generatedName = firstNames[randomFirstIndex] + " " + lastNames[randomLastIndex];
+
+        // Display the generated name
+        document.getElementById("generated-name").textContent = generatedName;
+      } catch (error) {
+        console.error("Error fetching names:", error);
+        alert("Error fetching names. Please check the files and try again.");
+      }
     }
   </script>
 </body>
