--- a/notsrs/namegen.html
+++ b/notsrs/namegen.html
@@ -11,7 +11,7 @@
   <div class="container">
     <h1>prodbyabnormal</h1>
     <h2>name generator fr</h2>
-     <p id="generated-name"></p>
+     <h5 id="generated-name"></h5>
 
 
 
