--- a/notsrs/colosseum.html
+++ b/notsrs/colosseum.html
@@ -43,7 +43,7 @@ function submitData() {
         wins: winCount
     };
     
-    fetch('http://173.45.22.47:5000/update_team', { // Ensure this matches the server-side endpoint
+    fetch('https:/capi.prodbyabnormal.com/update_team', { // Ensure this matches the server-side endpoint
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
