--- a/notsrs/acolosseum.html
+++ b/notsrs/acolosseum.html
@@ -6,9 +6,56 @@
 <title>COLOSSEUM ADMIN</title>
 
 <!-- Bootstrap CSS -->
+<!-- Bootstrap CSS -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.0/css/bootstrap.min.css" rel="stylesheet">
 
+<!-- Custom CSS -->
+<style>
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background-color: #f0f2f5;
+    }
+    .container {
+        max-width: 500px;
+        padding: 20px;
+        border-radius: 8px;
+        background: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    h2 {
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .form-label {
+        font-weight: bold;
+    }
+    .form-control {
+        border: 1px solid #ced4da;
+        border-radius: 0.25rem;
+    }
+    .form-control:focus {
+        border-color: #80bdff;
+        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+    }
+    .btn-primary {
+        background-color: #007bff;
+        border-color: #007bff;
+        box-shadow: none;
+        padding: 10px 15px;
+        font-size: 16px;
+        border-radius: 5px;
+    }
+    .btn-primary:hover {
+        background-color: #0056b3;
+        border-color: #0056b3;
+    }
+</style>
+
 </head>
+<body>
 <body class="py-5">
 <div class="container">
     <h2>Add a Team</h2>
