--- a/notsrs/acolosseum.html
+++ b/notsrs/acolosseum.html
@@ -47,12 +47,15 @@
         padding: 10px 15px;
         font-size: 16px;
         border-radius: 5px;
+        display: block; /* Add this */
+        margin: 0 auto; /* And this, to center the button */
     }
     .btn-primary:hover {
         background-color: #0056b3;
         border-color: #0056b3;
     }
 </style>
+
 
 </head>
 <body>
