--- a/notsrs/rcolosseum.html
+++ b/notsrs/rcolosseum.html
@@ -61,7 +61,7 @@
 <body>
 <body class="py-5">
 <div class="container">
-    <h2>Add a Team</h2>
+    <h2>Remove a Team</h2>
 
     <form id="editForm" class="needs-validation" novalidate>
         <div class="mb-3">
