--- a/colo/index.html
+++ b/colo/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h2>Navigation</h2>
-    <button onclick="location.href='/teamdashboard'">Go to Team Dashboard</button>
-    <button onclick="location.href='/management'">Go to Management</button>
-    <button onclick="location.href='/test'">Go to Test</button>
+    <button onclick="location.href='/colo/teamdashboard'">Go to Team Dashboard</button>
+    <button onclick="location.href='/colo/management'">Go to Management</button>
+    <button onclick="location.href='/colo/test'">Go to Test</button>
 </body>
 </html>
