--- a/colo/teamdashboard/addteam.html
+++ b/colo/teamdashboard/addteam.html
@@ -18,7 +18,7 @@
                 producer_team: isProducerTeam
             };
             
-            fetch("https://api.com/api", {
+            fetch("http://173.45.22.47/api/addteam", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
