--- a/colo/teamdashboard/addteam.html
+++ b/colo/teamdashboard/addteam.html
@@ -20,7 +20,7 @@
                 mgmtKey: mgmtKey
             };
             
-            fetch("http://173.45.22.47/api/team/add", {
+            fetch("https://api.prodbyabnormal.com/api/team/add", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
