--- a/colo/teamdashboard/addteam.html
+++ b/colo/teamdashboard/addteam.html
@@ -54,5 +54,7 @@
     
     
     <button onclick="submitForm()">Submit</button>
+    <button onclick="location.href='/colo/teamdashboard'">Go Back</button>
+
 </body>
 </html>
